--- a/assignments/projects/businesstime/styles.css
+++ b/assignments/projects/businesstime/styles.css
@@ -49,6 +49,7 @@ position: fixed;
 background-color: rgb(146, 213, 206);
 font-family: 'Courier New', Courier, monospace;
 font-style: bold;
+font-size: 20px;
 width: 100%;
 height: 50px;
 bottom: 0;
@@ -64,4 +65,9 @@ bottom: 0;
     right: 250px;
     margin-top: 15px;
 }
-
+@media (min-width: 500px) {
+    html {background: burlywood}
+}
+@media (max-width: 1800px) {
+    html {background: rgb(146, 213, 206);
+}
