--- a/assignments/projects/businesstime/styles.css
+++ b/assignments/projects/businesstime/styles.css
@@ -1,6 +1,7 @@
 html {
     background-color: rgb(146, 213, 206);
 }
+@media (min-width: 500px) {
 .headline {
     display: flex;
     background-color: linen;
@@ -65,32 +66,69 @@ bottom: 0;
     right: 250px;
     margin-top: 15px;
 }
-@media (min-width: 375px) {
-    .headline {width: 375px;
-        line-height: 50px;
-        text-align: center;
-        margin-bottom: 20px;
-        background-color: linen
-    }
-    
-    .clicks {display: flex;
+}
+@media (max-width: 500px) {
+    .headline {
+        display: flex;
+        background-color: linen;
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 50px;
+        height: 70px;
         justify-content: center;
-        height: 100px;
-        width: 375px;
-        flex-direction: column;
-        margin-top: 15px;
-
     }
-    .nap
-    .pics
-    #lady
-    .words
-    #pillows
-    .footer
-    #address
-    #email
-    html {background: burlywood}
+    .clicks { 
+        display: flex;
+        flex-direction: column;
+        height: 165px;
+        background-color: linen;
+        font-family: 'Courier New', Courier, monospace;
+        text-align: center;
+        font-size: 30px;
+    }
+    .nap{
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 30px;
+        text-align: center;
+        font-style: bold;
+    }
+    .pics {
+        display: inline-block;
+        background-color: linen;
+        height: 700px;
+    }
+    .words {
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 30px;
+    }
+    #lady {
+        width: 200px;
+        height: 200px;
+        bottom: 0;
+    }
+    #pillows {
+        width: 200px;
+        height: 200px;
+        top: 0;
+    }
+    .footer {
+    position: fixed;
+    background-color: rgb(146, 213, 206);
+    font-family: 'Courier New', Courier, monospace;
+    font-style: bold;
+    font-size: 15px;
+    width: 100%;
+    height: 60px;
+    bottom: 0px;
+    }
+    #address {
+    display: inline-block;
+    top: 0px;
+    }
+    #email {
+    display: inline-block;
+    top: 0px;
 }
-@media (max-width: 1800px) {
-    html {background: rgb(146, 213, 206);
 }
+/* @media (max-width: 1800px) {
+
+} */
