--- a/assignments/projects/betty-love/src/index.css
+++ b/assignments/projects/betty-love/src/index.css
@@ -1,5 +1,5 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+* {
+  font-family: 'Roboto', sans-serif;
+  background-color: lightgray;
+  text-decoration-color: rgb(45, 45, 45);
 }
