--- a/assignments/projects/personal-rr-site/src/index.css
+++ b/assignments/projects/personal-rr-site/src/index.css
@@ -1,10 +1,82 @@
 * {
   font-family: 'Monda', sans-serif;
+  text-decoration-color: rgb(64, 48, 87);
 }
 .nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 40px;
-    background-color: linen;
+    height: 50px;
+    background-color: rgb(180, 169, 149);
+    margin-bottom: 0%;
+}
+.footer {
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  background-color: rgb(180, 169, 149);
+  width: 100%;
+  height: 50px;
+  font-style: italic;
+  font-size: 17px;
+}
+.button {
+  border: 5px solid;
+  height: 80px;
+  width: 80px;
+  color: rgb(180, 169, 149);
+  font-style: bold;
+  font-size: 20px;
+  top: 550px;
+}
+.buttonHome {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 60px;
+}
+.homie {
+  background-size: contain;
+  background-image: url("https://demos.creative-tim.com/light-bootstrap-dashboard-react/static/media/sidebar-1.6be21e8a.jpg");
+  background-repeat: no-repeat;
+  height: 700px;
+  text-align: center;
+  font-size: 45px;
+  display: block;
+  position: absolute;
+  top: 55px;
+  width: 150%;
+}
+.q {
+  /* background-image: url("https://images.unsplash.com/photo-1516450523986-4d54f52ab80d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=48c048347554474c6a1b3b295b2f0bb5&auto=format&fit=crop&w=500&q=60");
+  background-repeat: no-repeat; */
+  /* background-size: cover; */
+  /* height: 700px; */
+  /* top: 50px;
+  height: 700px;
+  background-color: rgb(238, 232, 215); */
+  text-align: center;
+  font-size: 45px;
+}
+.favs {
+  background-image: url("https://images.unsplash.com/photo-1520047695178-77040c85e0da?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e4533045ce793c5d84e5bd1bcac2047e&auto=format&fit=crop&w=500&q=60");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 700px;
+  text-align: center;
+  font-size: 22px;
+  margin-top: 0%;
+}
+h2 {
+ font-style: italic;
+ border-spacing:  15px;
+}
+.pamela {
+ 
+}
+.Maya {
+  
+}
+.bob {
+  
 }
