--- a/assignments/projects/personal-rr-site/src/index.css
+++ b/assignments/projects/personal-rr-site/src/index.css
@@ -1,82 +1,314 @@
+
 * {
   font-family: 'Monda', sans-serif;
-  text-decoration-color: rgb(64, 48, 87);
+  }
+h3 {
+  margin: 0;
+}
+body {
+  margin: 0;
 }
 .nav {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-content: center;
     height: 50px;
-    background-color: rgb(180, 169, 149);
-    margin-bottom: 0%;
+    background-color: rgb(41, 136, 144);
+    border: 1px solid #333;
+    font-size: 30px;
+    width: 100%;
 }
 .footer {
   display: flex;
   position: fixed;
   bottom: 0;
-  text-align: center;
-  background-color: rgb(180, 169, 149);
+  background-color: rgb(41, 136, 144);
   width: 100%;
   height: 50px;
   font-style: italic;
-  font-size: 17px;
+  font-size: 22px;
+  border: 1px solid #333;
+  margin: auto;
+}
+.footer p {
+  text-align: center;
+  margin: auto;
 }
 .button {
   border: 5px solid;
-  height: 80px;
-  width: 80px;
-  color: rgb(180, 169, 149);
+  height: 100px;
+  width: 100px;
+  color: silver;
+  background-color: teal;
   font-style: bold;
-  font-size: 20px;
-  top: 550px;
-}
-.buttonHome {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 60px;
+  font-size: 28px;
+  border: 3px solid silver;
+  box-shadow: 10px 10px 5px 0 #333;
+  border-radius: 10%;
+  grid-row: 3;
+  margin-right: 200px;
 }
 .homie {
-  background-size: contain;
-  background-image: url("https://demos.creative-tim.com/light-bootstrap-dashboard-react/static/media/sidebar-1.6be21e8a.jpg");
-  background-repeat: no-repeat;
-  height: 700px;
-  text-align: center;
-  font-size: 45px;
-  display: block;
-  position: absolute;
+  background-size: cover;
+  background-color: rgb(23, 76, 80);
   top: 55px;
-  width: 150%;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 50px;
+}
+.home {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 5px;
+  font-size: 45px;
+  text-align: center;
+  vertical-align: middle;
+  height: 100%;
+  margin-bottom: 20px;
 }
 .q {
-  /* background-image: url("https://images.unsplash.com/photo-1516450523986-4d54f52ab80d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=48c048347554474c6a1b3b295b2f0bb5&auto=format&fit=crop&w=500&q=60");
-  background-repeat: no-repeat; */
-  /* background-size: cover; */
-  /* height: 700px; */
-  /* top: 50px;
-  height: 700px;
-  background-color: rgb(238, 232, 215); */
+  display: grid;
+  grid-template-rows: 50px 400px auto;
   text-align: center;
-  font-size: 45px;
-}
-.favs {
-  background-image: url("https://images.unsplash.com/photo-1520047695178-77040c85e0da?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e4533045ce793c5d84e5bd1bcac2047e&auto=format&fit=crop&w=500&q=60");
-  background-repeat: no-repeat;
+  font-size: 40px;
+  background-image: url("https://images.unsplash.com/photo-1519229560282-5c6d4a11e474?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cb6548e69b2812cd4008d56825cd94c9&auto=format&fit=crop&w=700&q=60");
   background-size: cover;
   height: 700px;
-  text-align: center;
-  font-size: 22px;
-  margin-top: 0%;
+  margin-bottom: 0%;
+}
+.quote {
+  grid-row: 2;
+}
+.by{
+  grid-row: 3;
+}
+.favs {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  background-image: url("https://images.unsplash.com/photo-1489835373123-77857c895b57?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=990548e89ced81eee398b4da56ca0dd8&auto=format&fit=crop&w=800&q=60");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 800px;
+  padding-bottom: 55px;
 }
 h2 {
- font-style: italic;
- border-spacing:  15px;
+  font-style: italic;
 }
 .pamela {
- 
+  align-content: center;
+  text-align: center;
+  background-color: rgba(41, 136, 144 .20);
+  border: 1px solid teal;
+  border-radius: 10%;
+  grid-row: 1;
+  grid-column: 1;
 }
 .Maya {
-  
+  align-content: center;
+  text-align: center;
+  background-color: rgba(41, 136, 144 .20);
+  border: 1px solid teal;
+  border-radius: 10%;
+  grid-row: 2;
+  grid-column: 2;
 }
 .bob {
-  
+  align-content: center;
+  text-align: center;
+  background-color: rgba(41, 136, 144 .20);
+  border: 1px solid teal;
+  border-radius: 10%;
+  grid-row: 3;
+  grid-column: 3;
+}
+.bob:hover {
+  background-color: silver;
+}
+.Maya:hover {
+  background-color: silver;
+}
+.pamela:hover {
+  background-color: silver;
+}
+.nav:hover{
+  background-color: silver;
+}
+.footer:hover {
+  background-color: silver;
+}
+.ready {
+  grid-column: 1;
+  grid-row: 1;
+  background-color: rgb(45, 148, 157);
+  border: 1px solid #333;
+  box-shadow: 10px 10px 5px 0 #333;
+  border-radius: 10%;
+  padding-top: 45px;
+  width: 350px;
+  margin-left: 20px;
+}
+.set {
+  grid-column: 2;
+  grid-row: 1;
+  background-color:  rgb(45, 148, 157);
+  border: 1px solid #333;
+  box-shadow: 10px 10px 5px 0 #333;
+  border-radius: 10%;
+  padding-top: 45px;
+  width: 350px;
+  margin-left: 20px;
+}
+.inspire {
+  grid-column: 3;
+  grid-row: 1;
+  background-color:  rgb(45, 148, 157);
+  border: 1px solid #333;
+  box-shadow: 10px 10px 5px 0 #333;
+  border-radius: 10%;
+  padding-top: 45px;
+  width: 350px;
+  margin-left: 20px;
+}
+.air {
+  grid-column: 1;
+  grid-row: 2;
+  height: 400px;
+  width: 400px;
+  border: 1px solid #333;
+  box-shadow: 10px 10px 5px 0 teal;
+  border-radius: 10%;
+}
+.water {
+  grid-column: 3;
+  grid-row: 2;
+  height: 400px;
+  width: 400px;
+  border: 1px solid #333;
+  box-shadow: 10px 10px 5px 0 teal;
+  border-radius: 10%;
+}
+.fire {
+  grid-column: 2;
+  grid-row: 2;
+  height: 400px;
+  width: 400px;
+  border: 1px solid #333;
+  box-shadow: 10px 10px 5px 0 teal;
+  border-radius: 10%;
+}
+@media screen and (max-width: 400px) {
+ .nav {
+   flex-direction: column;
+   height: 200px;
+   text-align: center
+ }
+ .footer {
+   height: 100px;
+   position: fixed;
+   bottom: 0%;
+ }
+ .home {
+  grid-template-columns: 1;
+  grid-template-rows: repeat(6, 1fr);
+  font-size: 30px;
+  margin-bottom: 105px;
+  margin-left: 20px;
+ }
+ .ready {
+  grid-column: 1;
+  grid-row: 1;
+  grid-gap: 5px;
+  box-shadow: none;
+  padding-top: 0%;
+  width: 200px;
+  margin-left: 70px;
+ }
+ .set {
+  grid-column: 1;
+  grid-row: 2;
+  grid-gap: 5px;
+  box-shadow: none;
+  padding-top: 0%;
+  width: 200px;
+  margin-left: 70px;
+ }
+ .inspire {
+  grid-column: 1;
+  grid-row: 3;
+  grid-gap: 5px;
+  box-shadow: none;
+  padding-top: 0%;
+  width: 200px;
+  margin-left: 70px;
+ }
+ .air {
+  grid-column: 1;
+  grid-row: 4;
+  box-shadow: none;
+  height: 200px;
+  width: 200px;
+  margin-left: 70px;
+  grid-gap: 10px;
+ }
+ .water {
+  grid-column: 1;
+  grid-row: 5;
+  box-shadow: none;
+  height: 200px;
+  width: 200px;
+  margin-left: 70px;
+  grid-gap: 10px;
+ }
+ .fire {
+  grid-column: 1;
+  grid-row: 6;
+  box-shadow: none;
+  height: 200px;
+  width: 200px;
+  margin-left: 70px;
+  grid-gap: 10px;
+ }
+ .q {
+   grid-template-columns: 1;
+   grid-template-rows: 350px 100px auto;
+   background-size: cover;
+   font-size: 25px;
+   text-align: left;
+   height: 100%;
+   margin-bottom: 100px;
+   width: 100%;
+ }
+ .quote {
+  grid-row: 1;
+  width: 395px;
+}
+.by{
+  padding-top: 50px;
+  grid-row: 2;
+}
+.button {
+  border: 5px solid;
+  height: 65px;
+  width: 65px;
+  color: silver;
+  background-color: teal;
+  font-style: bold;
+  font-size: 15px;
+  border: 3px solid silver;
+  box-shadow: none;
+  border-radius: 10%;
+  grid-row: 3;
+  margin-left: 180px;
+  margin-bottom: 5px;
+}
+.favs {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 100px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
 }
