--- a/assignments/projects/chakra-2/client/src/index.css
+++ b/assignments/projects/chakra-2/client/src/index.css
@@ -17,13 +17,75 @@
 }
 .home {
     text-decoration: none;
-    color: black
+    color: black;
+    font-weight: bold;
 }
 .seven {
     text-decoration: none;
-    color: black
+    color: black;
+    font-weight: bold;
 }
 .track {
     text-decoration: none;
-    color: black
+    color: black;
+    font-weight: bold;
+}
+.homePage {
+    display: grid;
+    grid-template-rows: 100px 100px 100px;
+    margin-top: 50px;
+    justify-content: center;
+}
+.whatBtn {
+    border: 3px solid rbg(106, 179, 229);
+    height: 70px;
+    width: 300px;
+    font-size: 30px;
+    font-weight: bold;
+    border-radius: 50%;
+}
+.howBtn {
+    border: 3px solid rbg(106, 179, 229);
+    height: 70px;
+    width: 300px;
+    font-size: 30px;
+    font-weight: bold;
+    border-radius: 50%;
+}
+.whyBtn {
+    border: 3px solid rbg(106, 179, 229);
+    height: 70px;
+    width: 300px;
+    font-size: 30px;
+    font-weight: bold;
+    border-radius: 50%;
+}
+.whatBtn:hover {
+    background-color: rgba(130, 87, 158, 0.3)
+}
+.howBtn:hover {
+    background-color: rgba(130, 87, 158, 0.3)
+}
+.whyBtn:hover {
+    background-color: rgba(130, 87, 158, 0.3)
+}
+.allSeven {
+    display: grid;
+    grid-template-columns: 200px 200px;
+    grid-template-rows: 225px 225px 225px 225px;
+    margin: auto;
+    text-align: center;
+}
+.colors {
+    height: 100px;
+    width: 100px;
+    position: relative;
+}
+.trackPage {
+    display: grid;
+    grid-template-rows: 100px 100px auto;
+    justify-content: center;
+    margin-top: 20px;
+    background-color: rgba(229, 145, 68, 0.3);
+    height: 100%;
 }
